--- a/src/Vista/VistaLibro.form
+++ b/src/Vista/VistaLibro.form
@@ -425,7 +425,7 @@
             <Property name="focusPainted" type="boolean" value="false"/>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="pressedIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Im&#xe1;genes/btnAgregar.png"/>
+              <Image iconType="3" name="/Im&#xe1;genes/btnAgregar2.png"/>
             </Property>
             <Property name="requestFocusEnabled" type="boolean" value="false"/>
           </Properties>
